kinda fix header issue on smaller screens when adding new album

--- a/PSS/wwwroot/css/UploadApply.css
+++ b/PSS/wwwroot/css/UploadApply.css
@@ -6,6 +6,7 @@
 }
 
 header {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
